force-app/main/default/objects/BizAttribute__c/BizAttribute__c.object-meta.xml
<CustomObject>
    <label>Biz. Attribute</label>
    <nameField>
        <label>Biz. Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Biz. Attribute</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>