force-app/main/default/objects/BizAttribute__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>사업 속성 내역</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>